<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    cardview:cardCornerRadius="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_Card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_username_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firstword_textsize_card">

                </TextView>

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    android:text="@string/timecard_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firstword_textsize_card">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margintop_card"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    android:text="@string/likenumbercard_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firstword_textsize_card">

                </TextView>

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>


</androidx.cardview.widget.CardView>